# explainable-reranker

./: .env.example  .gitignore  README.md  conftest.py  explain-for-everyone.md  plan.md  pyproject.toml
configs/: lora_target_modules.yaml
docs/: implementation-status.md  validation-runs.md
scripts/: _smoke_train.py  analyze_queries.py  bench_batch_equiv.py  bench_rerank.py  collect_and_label.py  compare_teachers.py  evaluate.py  generate_queries.py  inspect_lora_targets.py  learning_curve.py  make_splits.py  run_dummy_pipeline.py  serve_rerank.py  teacher_batch.py  train_neural.py  train_optimal.py  verify_generator_fp32.py
src/explainable_reranker/: __init__.py  io_cache.py
src/explainable_reranker/config/: __init__.py  env.py
src/explainable_reranker/data/: __init__.py  evidence_fallback.py  query_synth.py  sentence_index.py  snapshot_store.py  splits.py
src/explainable_reranker/distill/: __init__.py  dataset.py  gates.py  losses.py  neural_training.py  trainer.py  training.py
src/explainable_reranker/eval/: __init__.py  book_metrics.py  (+3 more)
tests/: test_config_env.py  test_serve_http.py  test_serve_smoke.py  test_w10_eval_reason.py  test_w1_data_pipeline.py  test_w1_evidence_fallback.py  test_w1_search_candidates_schema.py  test_w1_splits.py  test_w1_topa_client.py  test_w2_hard_negatives.py  test_w2_llm_teacher.py  test_w2_teacher_batch.py  test_w2_teacher_pipeline.py  test_w4_distill_pipeline.py  test_w4_neural_backend.py  test_w6_training_loop.py
tests/fixtures/: human_eval_set.json  topa_page_response.json  topa_search_candidates_response.json
(+27 files in other folders)
