[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "explainable-reranker"
version = "0.1.0"
description = "Grounded teacher-label and select-then-predict distillation pipeline for explainable reranking."
readme = "plan.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
