[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "explainable-reranker"
version = "0.1.0"
description = "Grounded teacher-label and select-then-predict distillation pipeline for explainable reranking."
readme = "plan.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
# GPU training/inference stack for the neural select-then-predict backend.
# Installed on the DGX Spark (GB10); the core package stays dependency-free.
gpu = [
    "torch>=2.4",
    "transformers>=4.44",
    "peft>=0.12",
    "accelerate>=0.33",
    "safetensors>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
